fixes z-index mobile phone modal

--- a/components/RotateDevice/RotateDevice.module.scss
+++ b/components/RotateDevice/RotateDevice.module.scss
@@ -11,6 +11,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    z-index: -1;
     .imageContainer{
         position: relative;
         width: 60%;
