--- a/styles/scss/Home.module.scss
+++ b/styles/scss/Home.module.scss
@@ -92,7 +92,7 @@
         position: absolute;
         width: 2px;
         height: 0vw;
-        background-color: $semitransparentDark5;
+        background-color: red;
         transition: background-color $change-theme-duration;
         transform: rotate(26.5deg);
         transform-origin: top;
@@ -167,7 +167,7 @@ html[data-theme="dark"] {
     .obliqueLineP,
     .obliqueLineN {
       transition: background-color $change-theme-duration!important;
-      background-color: $semitransparentLight5 !important;
+      background-color: red !important;
     }
   }
 }
